--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,10 @@
 {
     "name": "mosen/phpxmp",
     "description": "XMP Metadata Support in Pure PHP",
-    "version": "0.0.1",
     "type": "library",
     "license": "MIT",
+    "keywords": ["xmp", "metadata"],
+    "homepage": "https://github.com/mosen/phpxmp",
     "authors": [
         {
             "name": "Mosen",
@@ -19,7 +20,7 @@
         }
     },
     "require": {
-
+        "php": ">=5.3.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~5.1"
